--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,6 @@
   "name": "HelloIonic",
   "private": "true",
   "devDependencies": {
-    "ionic": "driftyco/ionic-bower#1.1.1",
-    "angular-nfc": "~0.0.0"
+    "ionic": "driftyco/ionic-bower#1.1.1"
   }
 }
